--- a/All samples/bootstrap/bootstrap-prestructure.htm
+++ b/All samples/bootstrap/bootstrap-prestructure.htm
@@ -4,6 +4,7 @@
     <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -11,7 +12,7 @@
         <div class="col-md-6"><img class="img-responsive" src="http://placehold.it/100x100"></div>
         <div class="col-md-6 text-right text-uppercase">
           <h1>Jane Doette</h1>
-          <h3>Front-end Ninja</h3>
+          <h4>Front-end Ninja</h4>
         </div>
       </div>
       <div class="row">
